appId: com.axonic
---
- launchApp
- runFlow:
    when:
      visible: http://10.0.2.2:8081
    commands:
      - tapOn: http://10.0.2.2:8081
- extendedWaitUntil:
    visible: ${CHAT_NAME}
    timeout: 30000
- tapOn:
    text: ${CHAT_NAME}
- tapOn:
    id: axonic-message-composer
- inputText: ${MESSAGE_TEXT}
- tapOn:
    id: axonic-send-message
- assertVisible:
    text: ${MESSAGE_TEXT}
