appId: com.axonic
---
- launchApp:
    stopApp: false
- runFlow:
    when:
      visible: http://10.0.2.2:8081
    commands:
      - tapOn: http://10.0.2.2:8081
- runFlow:
    when:
      notVisible:
        id: axonic-message-composer
    commands:
      - tapOn: ${CHAT_NAME}
- extendedWaitUntil:
    visible:
      id: axonic-message-composer
    timeout: 30000
- tapOn:
    id: axonic-voice-call
- extendedWaitUntil:
    visible:
      id: axonic-end-call
    timeout: 30000
